ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: app.com
      http:
        paths:
          - path: /show
            pathType: Prefix
            backend:
              service:
                name: mongo-express-service
                port:
                  number: 8002
